# h2w-aztools

./: .gitignore  README.md  pyproject.toml
aztools/: REAMDE.md  azmonitor.py  loganalytics.py  m365d.py  oauth.py  sentinel.py
docs/: oath.md
h2w_aztools/: __init__.py  azmonitor.py  loganalytics.py  m365d.py  oath.py  sentinel.py
